--- a/view/list.erb
+++ b/view/list.erb
@@ -1,49 +1,22 @@
-: cascade base
-: around page_title -> {
-<: $c.args.service_name :> » <: $c.args.section_name :> | <: super :>
-: }
-: around page_header -> {
-<div class="row">
-  <div class="col-md-8">
-    <h1>
-      <a href="<: $c.req.uri_for('/') :>">Home</a> » <a href="<: $c.req.uri_for('/list/'~uri_escape($c.args.service_name)) :>"><: $c.args.service_name :></a> » <: $c.args.section_name :>
-    </h1>
-  </div>
-  <div class="col-md-4" style="padding-top:25px;text-align:right">
-    <a class="btn btn-default btn-sm" id="link-fold-all" href="#">fold all</a>
-    <a class="btn btn-default btn-sm" id="link-expand-all" href="#">expand all</a>
-    <a class="btn btn-default btn-sm" href="<: $c.req.uri_for('/add_complex',[service_name=>$c.args.service_name,section_name=>$c.args.section_name]) :>">add complex graph</a>
-  </div>
-</div>
-: }
-
-: around content -> {
-
 <ul class="pagination pagination-sm pull-right" style="margin: 10px 0px 0px">
-  : if ( $c.stash.enable_short ) {
-  <li class="prev <: ( $c.req.param('t') == 'sh' ) ? "active" : "" :>"><a href="<: $c.req.uri_for('/list/'~uri_escape($c.args.service_name)~'/'~uri_escape($c.args.section_name), [t=>'sh']) :>">hour・8hours(1min)</a></li>
-  <li class="prev <: ( $c.req.param('t') == 'sd' ) ? "active" : "" :>"><a href="<: $c.req.uri_for('/list/'~uri_escape($c.args.service_name)~'/'~uri_escape($c.args.section_name), [t=>'sd']) :>">day・3days(1min)</a></li>
-  : }
-  <li class="prev <: ( $c.req.param('t') == 'h' ) ? "active" : "" :>"><a href="<: $c.req.uri_for('/list/'~uri_escape($c.args.service_name)~'/'~uri_escape($c.args.section_name), [t=>'h']) :>">hour・halfday</a></li>
-  <li class="<: ( $c.req.param('t') != 'h' && $c.req.param('t') != 'm' && $c.req.param('t') != 'sh' && $c.req.param('t') != 'sd') ? "active" : "" :>"><a href="<: $c.req.uri_for('/list/'~uri_escape($c.args.service_name)~'/'~uri_escape($c.args.section_name)) :>">day・week</a></li>
-  <li class="next <: ( $c.req.param('t') == 'm' ) ? "active" : "" :>"><a href="<: $c.req.uri_for('/list/'~uri_escape($c.args.service_name)~'/'~uri_escape($c.args.section_name), [t=>'m']) :>">month・year</a></li>
+  <% section_path = linkpath(pathinfo[0..1]) %>
+  <li class="prev <%= params[:t] == 'sh' ? 'active' : '' %>"><a href="<%= url_for section_path, t:'sh' %>">hour・8hours(1min)</a></li>
+  <li class="prev <%= params[:t] == 'sd' ? 'active' : '' %>"><a href="<%= url_for section_path, t:'sd' %>">day・3days(1min)</a></li>
+  <li class="prev <%= params[:t] == 'h' ? 'active' : '' %>"><a href="<%= url_for section_path, t:'h' %>">hour・halfday</a></li>
+  <li class="<%= ['h','m','sh','sd'].include?(params[:t]) ? '' : 'active' %>"><a href="<%= url_for section_path %>">day・week</a></li>
+  <li class="next <%= params[:t] == 'm' ? 'active' : '' %>"><a href="<%= url_for section_path, t:'m' %>">month・year</a></li>
 </ul>
 <div class="clearfix"></div>
 <br />
 
-: my $term_arg = $c.req.param('t') ? [ 't', $c.req.param('t') ] : [];
+<% term_arg = params[:t] ? { t: params[:t] } : {} %>
 <div class="panel-group">
-: for $graphs ->  $graph {
-  : my $index = $~graph.index;
-  : include "view.tx" { graph => $graph, index => $index };
-: } # for graphs
+  <% graphs.each do |graph| %>
+  <%# : my $index = $~graph.index; %> <!-- index? -->
+  <%== erb :view, layout: false, locals: { graph: graph, listing: true, current_term: params[:t], term_arg: term_arg } %>
+  <% end %>
 </div>
 
 <p style="text-align: right;margin:20px 0px">
-  <button type="button" class="btn btn-default btn-danger btn-sm hxr_confirm_button" data-confirm="remove all graphs in '<: $c.args.section_name :>' section?" data-uri="<: $c.req.uri_for('/delete/'~uri_escape($c.args.service_name)~'/'~uri_escape($c.args.section_name)) :>"><span class="glyphicon glyphicon-warning-sign"></span> remove all graphs in this section</button>
+  <button type="button" class="btn btn-default btn-danger btn-sm hxr_confirm_button" data-confirm="remove all graphs in '<%= params[:section_name] %>' section?" data-uri="<%= url_for linkpath(pathinfo[0..1], '/delete') %>"><span class="glyphicon glyphicon-warning-sign"></span> remove all graphs in this section</button>
 </p>
-
-
-: } # arround
-
-
