--- a/view/edit.erb
+++ b/view/edit.erb
@@ -1,17 +1,4 @@
-: cascade base
-: around page_header -> {
-<div class="row">
-  <div class="col-md-8">
-    <h1>Edit Graph</h1>
-  </div>
-</div>
-: }
-
-: around content -> {
-
-: block form |  fillinform( $graph ) -> {
-
-<form class="hxrpost form-horizontal" method="post" action="<: $c.req.uri_for('/edit/'~uri_escape($graph.service_name)~'/'~uri_escape($graph.section_name)~'/'~uri_escape($graph.graph_name)) :>" role="form">
+<form class="hxrpost form-horizontal" method="post" action="<%= url_for linkpath(graph.path, '/edit') %>" role="form">
 
 <fieldset>
 
@@ -20,11 +7,11 @@
   <div class="col-sm-8">
     <div class="input-group">
       <span class="input-group-addon">/</span>
-      <input type="text" class="form-control" name="service_name" />
+      <input type="text" class="form-control" name="service_name" value="<%= graph.service %>" />
       <span class="input-group-addon">/</span>
-      <input type="text" class="form-control" name="section_name" />
+      <input type="text" class="form-control" name="section_name" value="<%= graph.section %>" />
       <span class="input-group-addon">/</span>
-      <input type="text" class="form-control" name="graph_name" />
+      <input type="text" class="form-control" name="graph_name" value="<%= graph.graph %>" />
     </div>
     <p class="help-block">Graph's URI(service name/section name/graph name)</p>
   </div>
@@ -33,7 +20,7 @@
 <div class="form-group">
   <label for="" class="col-sm-3 control-label">Description</label>
   <div class="col-sm-9">
-    <input type="text" class="form-control" name="description" />
+    <input type="text" class="form-control" name="description" value="<%= graph.description %>" />
   </div>
 </div>
 
@@ -41,26 +28,26 @@
   <label for="" class="col-sm-3 control-label">Display order</label>
   <div class="col-sm-4">
     <select name="sort" class="form-control">
-      <option value="19">19</option>
-      <option value="18">18</option>
-      <option value="17">17</option>
-      <option value="16">16</option>
-      <option value="15">15</option>
-      <option value="14">14</option>
-      <option value="13">13</option>
-      <option value="12">12</option>
-      <option value="11">11</option>
-      <option value="10">10</option>
-      <option value="9">9</option>
-      <option value="8">8</option>
-      <option value="7">7</option>
-      <option value="6">6</option>
-      <option value="5">5</option>
-      <option value="4">4</option>
-      <option value="3">3</option>
-      <option value="2">2</option>
-      <option value="1">1</option>
-      <option value="0">0</option>
+      <option value="19" <%= selected?(graph.sort, 19) %>>19</option>
+      <option value="18" <%= selected?(graph.sort, 18) %>>18</option>
+      <option value="17" <%= selected?(graph.sort, 17) %>>17</option>
+      <option value="16" <%= selected?(graph.sort, 16) %>>16</option>
+      <option value="15" <%= selected?(graph.sort, 15) %>>15</option>
+      <option value="14" <%= selected?(graph.sort, 14) %>>14</option>
+      <option value="13" <%= selected?(graph.sort, 13) %>>13</option>
+      <option value="12" <%= selected?(graph.sort, 12) %>>12</option>
+      <option value="11" <%= selected?(graph.sort, 11) %>>11</option>
+      <option value="10" <%= selected?(graph.sort, 10) %>>10</option>
+      <option value="9" <%= selected?(graph.sort, 9) %>>9</option>
+      <option value="8" <%= selected?(graph.sort, 8) %>>8</option>
+      <option value="7" <%= selected?(graph.sort, 7) %>>7</option>
+      <option value="6" <%= selected?(graph.sort, 6) %>>6</option>
+      <option value="5" <%= selected?(graph.sort, 5) %>>5</option>
+      <option value="4" <%= selected?(graph.sort, 4) %>>4</option>
+      <option value="3" <%= selected?(graph.sort, 3) %>>3</option>
+      <option value="2" <%= selected?(graph.sort, 2) %>>2</option>
+      <option value="1" <%= selected?(graph.sort, 1) %>>1</option>
+      <option value="0" <%= selected?(graph.sort, 0) %>>0</option>
     </select>
     <p class="help-block">19 is top</p>
   </div>
@@ -70,9 +57,9 @@
   <label for="" class="col-sm-3 control-label">Mode</label>
   <div class="col-sm-4">
     <select name="gmode" class="form-control">
-    <option value="gauge">Gauge</option>
-    <option value="subtract">Subtract</option>
-    <option value="both">Both</option>
+    <option value="gauge" <%=    selected?(graph.gmode, 'gauge') %>>Gauge</option>
+    <option value="subtract" <%= selected?(graph.gmode, 'subtract') %>>Subtract</option>
+    <option value="both" <%=     selected?(graph.gmode, 'both') %>>Both</option>
     </select>
    </div>
 </div>
@@ -83,13 +70,13 @@
     <div class="input-group">
       <span class="input-group-static">Value</span>
       <select name="adjust" class="form-control">
-        <option value="*">×</option>
-        <option value="/">÷</option>
+        <option value="*" <%= selected?(graph.adjust, '*') %>>×</option>
+        <option value="/" <%= selected?(graph.adjust, '/') %>>÷</option>
       </select>
       <span class="input-group-static" style="padding: 0"></span>
-      <input type="text" class="form-control" name="adjustval" />
+      <input type="text" class="form-control" name="adjustval" value="<%= graph.adjustval %>" />
       <span class="input-group-static">unit</span>
-      <input type="text" class="form-control" name="unit" />
+      <input type="text" class="form-control" name="unit" value="<%= graph.unit %>" />
     </div>
   </div>
 </div>
@@ -98,7 +85,7 @@
   <label for="" class="col-sm-3 control-label">Color</label>
   <div class="col-sm-3">
     <div class="input-group">
-      <input type="text" name="color" id="form-<: $index :>-color" class="form-control color_pallet" />
+      <input type="text" name="color" id="form--color" class="form-control color_pallet" value="<%= graph.color %>" />
     </div>
     <p class="help-block">#000000-#FFFFFF</p>
   </div>
@@ -108,9 +95,9 @@
   <label for="" class="col-sm-3 control-label">Type</label>
   <div class="col-sm-4">
     <select name="type" class="form-control">
-      <option value="AREA">AREA</option>
-      <option value="LINE1">LINE</option>
-      <option value="LINE2">LINE(Bold)</option>
+      <option value="AREA" <%=  selected?(graph.type, 'AREA') %>>AREA</option>
+      <option value="LINE1" <%= selected?(graph.type, 'LINE1') %>>LINE</option>
+      <option value="LINE2" <%= selected?(graph.type, 'LINE2') %>>LINE(Bold)</option>
     </select>
   </div>
 </div>
@@ -119,9 +106,9 @@
   <label for="" class="control-label col-sm-3">Effective range</label>
   <div class="col-sm-6">
     <div class="input-group">
-     <input type="text" class="form-control" name="llimit" />
+     <input type="text" class="form-control" name="llimit" value="<%= graph.llimit %>" />
      <span class="input-group-static">〜</span>
-     <input type="text" class="form-control" name="ulimit" />
+     <input type="text" class="form-control" name="ulimit" value="<%= graph.ulimit %>" />
     </div>
   </div>
 </div>
@@ -130,9 +117,9 @@
   <label for="" class="control-label col-sm-3">Mode of subtract Graph</label>
   <div class="col-sm-4">
     <select name="stype" class="form-control">
-    <option value="AREA">AREA</option>
-    <option value="LINE1">LINE</option>
-    <option value="LINE2">LINE(Bold)</option>
+      <option value="AREA" <%=  selected?(graph.stype, 'AREA') %>>AREA</option>
+      <option value="LINE1" <%= selected?(graph.stype, 'LINE1') %>>LINE</option>
+      <option value="LINE2" <%= selected?(graph.stype, 'LINE2') %>>LINE(Bold)</option>
     </select>
   </div>
 </div>
@@ -141,9 +128,9 @@
   <label for="" class="control-label col-sm-3">Effective range of subtract Graph</label>
   <div class="col-sm-6">
     <div class="input-group">
-      <input type="text" class="form-control" name="sllimit" />
+      <input type="text" class="form-control" name="sllimit" value="<%= graph.sllimit %>" />
       <span class="input-group-static">〜</span>
-      <input type="text" class="form-control" name="sulimit" />
+      <input type="text" class="form-control" name="sulimit" value="<%= graph.sulimit %>" />
     </div>
   </div>
 </div>
@@ -155,17 +142,11 @@
 <div class="form-group">
   <div class="col-sm-offset-3 col-sm-6">
     <input type="submit" class="btn btn-default btn-primary" value="Submit" />
-    <a href="<: $c.req.uri_for('/list/'~uri_escape($graph.service_name)~'/'~uri_escape($graph.section_name)) :>" class="btn btn-default">Cancel</a>
-    <button type="button" class="btn btn-default btn-danger hxr_confirm_button" data-confirm="remove '<: $graph.graph_name :>'?" data-uri="<: $c.req.uri_for('/delete/'~uri_escape($graph.service_name)~'/'~uri_escape($graph.section_name)~'/'~uri_escape($graph.graph_name)) :>">remove</button>
+    <a href="<%= url_for linkpath([graph.service, graph.section]) %>" class="btn btn-default">Cancel</a>
+    <button type="button" class="btn btn-default btn-danger hxr_confirm_button" data-confirm="remove '<%= graph.graph %>'?" data-uri="<%= url_for linkpath(graph.path, '/delete') %>">remove</button>
   </div>
 </div>
 
 </form>
 <br />
 <br />
-
-: } # fillin
-
-
-: }
-
