--- a/view/base.erb
+++ b/view/base.erb
@@ -84,7 +84,7 @@ Focuslight
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="<%= pathinfo[4] != :docs ? '' : 'active' %>"><a href="<%= url_for '/' %>">Home</a></li>
+        <li class="<%= pathinfo[4] != :docs ? 'active' : '' %>"><a href="<%= url_for '/' %>">Home</a></li>
         <li class="<%= pathinfo[4] == :docs ? 'active' : '' %>"><a href="<%= url_for '/docs' %>">Docs</a></li>
       </ul>
     </div>
