--- a/view/edit_complex.erb
+++ b/view/edit_complex.erb
@@ -73,7 +73,7 @@
 </select></td>
 <td><select name="path-1" class="form-control">
 <% graphs.each do |graph| %>
-<option value="<%= graph['id'] %>" <%= selected?(first_row[:path], graph['id']) %>>/<%= graph['service_name'] %>/<%= graph['section_name'] %>/<%= graph['graph_name'] %></option>
+<option value="<%= graph[:id] %>" <%= selected?(first_row[:path], graph[:id]) %>>/<%= graph[:service_name] %>/<%= graph[:section_name] %>/<%= graph[:graph_name] %></option>
 <% end %>
 </select></td>
 <td style="text-align: center"><select name="gmode-1" class="form-control">
@@ -108,7 +108,7 @@
 </select></t>
 <td><select name="path-add" id="path-add" class="form-control">
 <% graphs.each do |graph| %>
-<option value="<%= graph['id'] %>" <%= selected?(first_row[:path], graph['id']) %>>/<%= graph['service_name'] %>/<%= graph['section_name'] %>/<%= graph['graph_name'] %></option>
+<option value="<%= graph[:id] %>" <%= selected?(first_row[:path], graph[:id]) %>>/<%= graph[:service_name] %>/<%= graph[:section_name] %>/<%= graph[:graph_name] %></option>
 <% end %>
 </select></td>
 <td style="text-align: center"><select name="gmode-add" id="gmode-add" class="form-control">
@@ -128,7 +128,7 @@
 <td><span class="table-order-pointer table-order-up">⬆</span><span class="table-order-pointer table-order-down">⬇</span></td>
 <td><%= case row[:type] when 'AREA' then 'AREA' when 'LINE1' then 'LINE' else 'LINE(Bold)' end %><input type="hidden" name="type-2[]" value="<%= row[:type] %>"/></td>
 <% graph = dic[row[:graph_id]] %>
-<td>/<%= graph['service_name'] %>/<%= graph['section_name'] %>/<%= graph['graph_name'] %><input type="hidden" name="path-2[]" value="<%= row[:path] %>"/></td>
+<td>/<%= graph[:service_name] %>/<%= graph[:section_name] %>/<%= graph[:graph_name] %><input type="hidden" name="path-2[]" value="<%= row[:path] %>"/></td>
 <td style="text-align:center"><%= row[:gmode] == 'gauge' ? 'Gauge' : 'Subtract' %><input type="hidden" name="gmode-2[]" value="<%= row[:gmode] %>" /></td>
 <td style="text-align:center"><%= row[:stack] ? 'enable' : 'disable' %><input type="hidden" name="stack-2[]" value="<%= row[:stack] ? 1 : 0 %>" /></td>
 <td style="text-align:center"><span class="table-order-remove">✖</span></td>
