--- a/view/view.erb
+++ b/view/view.erb
@@ -33,13 +33,10 @@
         <td><img src="<%= url_for("/graph/#{graph.complex_graph}", t: terms[1], sumup: (graph.sumup ? '1' : '0')) %>" class="graph" /></td>
       </tr>
     <% else %>
-      <% gmodes = case graph.gmode when 'both' then ['gauge','subtract'] when 'gauge' then ['gauge'] else ['subtract'] end %>
-      <% gmodes.each do |gmode| %>
       <tr>
-        <td><img src="<%= url_for linkpath(graph.path, '/graph'), t: terms[0], gmode: gmode %>" class="graph" /></td>
-        <td><img src="<%= url_for linkpath(graph.path, '/graph'), t: terms[1], gmode: gmode %>" class="graph" /></td>
+        <td><img src="<%= url_for linkpath(graph.path, '/graph'), t: terms[0] %>" class="graph" /></td>
+        <td><img src="<%= url_for linkpath(graph.path, '/graph'), t: terms[1] %>" class="graph" /></td>
       </tr>
-      <% end %>
     <% end %>
   </table>
 </div>
