--- a/view/base.erb
+++ b/view/base.erb
@@ -155,7 +155,7 @@ Focuslight
   </div>
 </div>
 
-<script type="text/javascript" src="<%= url_for '/js/jquery-1.10.2.min.js' %>"></script>
+<script type="text/javascript" src="<%= url_for '/js/jquery-3.5.1.slim.min.js' %>"></script>
 <script type="text/javascript" src="<%= url_for '/js/bootstrap.min.js' %>"></script>
 <script type="text/javascript" src="<%= url_for '/js/jquery.storageapi.min.js' %>"></script>
 <script type="text/javascript" src="<%= url_for '/js/site.js' %>"></script>
