--- a/view/base.erb
+++ b/view/base.erb
@@ -41,6 +41,8 @@
 html,
 body {
   height: 100%;
+  min-height: 75rem;
+  padding-top: 2.0rem;
   /* The html and body elements cannot have any padding or margin. */
 }
 
@@ -71,29 +73,29 @@ Focuslight
 <body>
 <div id="wrap">
 
-<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-expand-sm navbar-dark bg-dark fixed-top" role="navigation">
   <div class="container">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+      <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
+        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"></span>
       </button>
       <a class="navbar-brand" href="<%= url_for '/' %>">Focuslight</a>
     </div>
     <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="<%= pathinfo[4] != :docs ? 'active' : '' %>"><a href="<%= url_for '/' %>">Home</a></li>
-        <li class="<%= pathinfo[4] == :docs ? 'active' : '' %>"><a href="<%= url_for '/docs' %>">Docs</a></li>
+      <ul class="navbar-nav">
+        <li class="nav-item <%= pathinfo[4] != :docs ? 'active' : '' %>"><a class="nav-link" href="<%= url_for '/' %>">Home</a></li>
+        <li class="nav-item <%= pathinfo[4] == :docs ? 'active' : '' %>"><a class="nav-link" href="<%= url_for '/docs' %>">Docs</a></li>
       </ul>
     </div>
   </div>
-</div>
+</nav>
 
 <div class="container">
 
-  <div class="page-header">
+  <div class="pb-2 mt-4 mb-2 border-bottom">
 
     <% if pathinfo[4] %>
     <div class="row">
