Migrating to Bootstrap v4

--- a/view/base.erb
+++ b/view/base.erb
@@ -4,6 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html" charset="utf-8">
 <link rel="shortcut icon" href="<%= url_for '/favicon.ico', v: 2 %>" type="image/vnd.microsoft.icon" />
 <link rel="stylesheet" href="<%= url_for '/css/bootstrap.min.css' %>">
+<link rel="stylesheet" href="<%= url_for '/css/all.min.css' %>">
 <style type='text/css'>
 .modal form {
   margin: 0 0;
